--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Your Flower's</h1>
 <%= simple_form_for [@bunch, @bookmark] do |f|%>
   <%= f.association :flower, label_method: :custom_label %>
+  <%= f.input :quantity %>
   <%= f.submit %>
 <% end %>
