--- a/app/views/bunches/show.html.erb
+++ b/app/views/bunches/show.html.erb
@@ -6,4 +6,5 @@
 <p><%= bookmark.quantity %></p>
 <p><%=link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></p>
 <%end%>
+<p><%= @price%>
 <%= link_to "Back to home", bunches_path%>
