--- a/app/views/bunches/show.html.erb
+++ b/app/views/bunches/show.html.erb
@@ -1,10 +1,15 @@
-<h1><%=@bunch.name%></h1>
-<%= link_to "Add flowers", new_bunch_bookmark_path(@bunch)%>
-<% @bunch.bookmarks.each do |bookmark| %>
-<p><%= bookmark.flower.name %></p>
-<p><%= bookmark.flower.price %></p>
-<p><%= bookmark.quantity %></p>
-<p><%=link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></p>
-<%end%>
-<p><%= @price%>
-<%= link_to "Back to home", bunches_path%>
+<div class = "banner" style="background-image: url('<%= image_path("banner3.webp") %>')" >
+  <h1><%=@bunch.name%></h1>
+  <h1>Design your own bouquet</h1>
+  <h1>Your Flower's</h1>
+  <%= simple_form_for [@bunch] do |f| %>
+    <% Flower.all.each do |flower| %>
+      <% bookmark = @bunch.bookmarks.find_by(flower_id: flower.id) %>
+      <%= f.simple_fields_for :bookmarks, bookmark || @bunch.bookmarks.build(flower: flower) do |bf| %>
+        <%= bf.association :flower, label_method: :custom_label, input_html: { id: "bookmark_flower_id_#{flower.id}" } %>
+        <%= bf.input :quantity, input_html: { id: "bookmark_quantity_#{flower.id}", value: bf.object.quantity || 0 } %>
+      <% end %>
+    <% end %>
+    <%= f.submit %>
+  <% end %>
+  <div>
